# test_repo

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  example.py  pyproject.toml  requirements.txt  tracker_testing.py
data_parsing/: .gitignore  README.md  requirements.txt
data_parsing/annots/dots_camera_14_time_3-30_5-30/: annotations.xml
data_parsing/annots/dots_camera_15_time_3-30_5-30/: annotations.xml
data_parsing/annots/task_kate_evraz_cam14_0530_0730_20211110-080000--20211110-083000-2021_11_15_07_26_01-cvat for video 1.1/: annotations.xml
data_parsing/annots/task_zigzag_cam14_0130_0330-2021_11_16_07_26_40-cvat for video 1.1/: annotations.xml
data_parsing/notebooks/: data_parsing.py  parse cvat data.ipynb
lattice/: tracker.py
lattice/point_flow/: __init__.py  filtering.py  grid_structure.py  propagation.py  segmentation.py  triangulation.py
tests/: test_lattice.py
