[tool.poetry]
name = "lattice"
version = "0.1.0"
description = ""
authors = ["sm <vmoshkin@sinergo.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "4.5.1.48"
scipy = "1.6.1"
filterpy = "^1.4.5"
scikit-learn = "0.24.1"
photutils = "1.1.0"
pyocclient = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
